<resources>
    <string name="scan">Scan</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="refresh">Refresh</string>

    <string name="wocr_hint_position_card_in_frame">Position your card in this frame</string>
    <string name="wocr_button_enter_card_number">Enter card details manually</string>
    <string name="wocr_toggle_flash">Toggle flash</string>
    <string name="wocr_powered_by">Powered by CodeLytical</string>
    <string name="hold_your_nfc_card_to_the_back">Hold your NFC Card to the back of your NFC supported phone</string>
    <string name="card_aid">Card AID: </string>
    <string name="application">Application: </string>
    <string name="cardType">Card Type: </string>
    <string name="pinTry">Pin try limit: </string>
    <string name="extended_card_details">Extended card details</string>
    <string name="confirm">Confirm</string>
    <string name="card_representation">Card Representation</string>
    <string name="nfc_scan">NFC Scan</string>

    <string name="label_name">NFC Reader</string>
    <string name="tap_your_card_to_the_back_of_your_nfc_phone">Tap your card to the back of your NFC phone.</string>
    <string name="loading">Loading…</string>
    <string name="amount_to_pay">Amount to pay</string>
</resources>