<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NfcDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/cardview_light_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/cardRepresent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Card Representation"
                            android:textSize="14sp"/>

                        <ImageView
                            android:id="@+id/resetData"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:src="@android:drawable/ic_menu_delete"
                            android:tint="@color/wocr_default_window_background"
                            android:contentDescription="@string/appbar_scrolling_view_behavior" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:background="@drawable/card_background">

                        <TextView
                            android:id="@+id/bank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Bank"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif-condensed-medium"/>

                        <TextView
                            android:id="@+id/txtCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="xxxx xxxx xxxx xxxx"
                            android:layout_marginTop="20dp"
                            android:textSize="22sp"
                            android:fontFamily="sans-serif-black"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="40dp">

                            <TextView
                                android:id="@+id/txtExpiryDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Expire xx/xx"
                                android:textSize="18sp"
                                android:fontFamily="sans-serif-condensed-medium"/>

                            <ImageView
                                android:id="@+id/cardLogo"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/creditcard"
                                android:contentDescription="@string/appbar_scrolling_view_behavior" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/cardview_light_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/extended_card_details"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textSize="16sp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/cardAid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_aid"
                            android:fontFamily="sans-serif-black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/cardAidInformation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/cardAid"
                            android:layout_marginStart="10dp"
                            tools:text="Card AID"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="14sp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/application"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/application"
                            android:fontFamily="sans-serif-black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/applicationInformation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/application"
                            android:layout_marginStart="10dp"
                            tools:text="Card AID"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="14sp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/cardType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cardType"
                            android:fontFamily="sans-serif-black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/cardTypeInformation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/cardType"
                            android:layout_marginStart="10dp"
                            tools:text="Card AID"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="14sp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/pinTry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pinTry"
                            android:fontFamily="sans-serif-black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/pinTryInformation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/pinTry"
                            android:layout_marginStart="10dp"
                            tools:text="Card AID"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="14sp"/>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/wocr_primary"
            android:text="Confirm"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>